--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,52 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&family=Josefin+Sans:wght@300;500;700&family=Karla:ital@1&family=Kumbh+Sans&family=Manrope:wght@600&family=Overpass&family=Poppins:wght@500&family=Raleway&family=Roboto+Serif:ital,opsz,wght@0,8..144,300;1,8..144,200;1,8..144,300&family=Rubik:wght@400;500;700&family=Space+Grotesk:wght@500&family=Space+Mono:wght@400;700&display=swap');
+
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: 'Barlow Semi Condensed';
+  font-size: 13px;
+  background-color: hsl(210, 46%, 95%);
+}
+
+.App {
+  margin: 10px;
+}
+.dane {
+  width: 420px;
+  height: fit-content;
+  background: hsl(263, 55%, 52%);
+  border-radius: 8px;
+  margin: 10px;
+}
+.jon {
+  width: 180px;
+  height: fit-content;
+  background: hsl(217, 19%, 35%);
+  border-radius: 8px;
+  margin: 10px;
+}
+.jeane {
+  width: 150px;
+  height: fit-content;
+  background: hsl(0, 0%, 100%);
+  border-radius: 8px;
+  margin: 10px;
+}
+.patii {
+  width: 440px;
+  height: fit-content;
+  background: hsl(219, 29%, 14%);
+  border-radius: 8px;
+  margin: 10px;
+}
+.kiraa {
+  width: 150px;
+  height: fit-content;
+  background: hsl(0, 0%, 100%);
+  border-radius: 8px;
+  margin: 10px;
 }
