--- a/src/index.css
+++ b/src/index.css
@@ -16,14 +16,14 @@ body {
   margin: 10px;
 }
 .dane {
-  width: 420px;
+  width: 480px;
   height: fit-content;
   background: hsl(263, 55%, 52%);
   border-radius: 8px;
   margin: 10px;
 }
 .jon {
-  width: 180px;
+  width: 220px;
   height: fit-content;
   background: hsl(217, 19%, 35%);
   border-radius: 8px;
@@ -49,4 +49,41 @@ body {
   background: hsl(0, 0%, 100%);
   border-radius: 8px;
   margin: 10px;
+}
+.imgg img{
+  width: 35px;
+  height: 35px;
+  border-radius: 50%;
+  margin-right: 10px;
+  margin-top: 2px;
+  border: 2px solid #fff;
+}
+.name {
+  margin-top: -4px;
+  font-weight: 500;
+  font-size: 14px;
+  margin-bottom: 2px;
+  color: hsl(0, 0%, 81%);
+}
+.header {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  padding: 20px 20px;
+}
+.status {
+  color: hsl(0, 0%, 81%);
+  opacity: 0.5;
+  font-size: 10px;
+}
+.intro{
+  color: hsl(0, 0%, 100%);
+  font-weight: 600;
+  font-size: 16px;
+  padding: 0 20px 20px 20px;
+}
+.review {
+  color: hsl(0, 0%, 81%);
+  opacity: 0.7;
+  padding: 0 20px 20px 20px;
 }
