--- a/src/index.css
+++ b/src/index.css
@@ -10,45 +10,57 @@ body {
   font-family: 'Barlow Semi Condensed';
   font-size: 13px;
   background-color: hsl(210, 46%, 95%);
+  display: grid;
+  place-content: center;
+  min-height: 100vh;
 }
 
 .App {
-  margin: 10px;
+  margin: auto;
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+  display: grid;
+  gap: 10px;
 }
 .dane {
-  width: 480px;
+  /* width: 480px; */
   height: fit-content;
   background: hsl(263, 55%, 52%);
   border-radius: 8px;
   margin: 10px;
+  
 }
 .jon {
-  width: 220px;
+  /* width: 220px; */
   height: fit-content;
   background: hsl(217, 19%, 35%);
   border-radius: 8px;
   margin: 10px;
+  
 }
 .jeane {
-  width: 150px;
+  /* width: 200px; */
   height: fit-content;
   background: hsl(0, 0%, 100%);
   border-radius: 8px;
   margin: 10px;
+  
 }
 .patii {
-  width: 440px;
+  /* width: 440px; */
   height: fit-content;
   background: hsl(219, 29%, 14%);
   border-radius: 8px;
   margin: 10px;
+  
 }
 .kiraa {
-  width: 150px;
+  /* width: 220px; */
   height: fit-content;
   background: hsl(0, 0%, 100%);
   border-radius: 8px;
   margin: 10px;
+  
 }
 .imgg img{
   width: 35px;
@@ -86,4 +98,43 @@ body {
   color: hsl(0, 0%, 81%);
   opacity: 0.7;
   padding: 0 20px 20px 20px;
+}
+.harm {
+  color: hsl(217, 19%, 35%);
+}
+.nam {
+  margin-top: -4px;
+  font-weight: 500;
+  font-size: 14px;
+  margin-bottom: 2px;
+  color: hsl(217, 19%, 35%);
+  opacity: 0.8;
+}
+.stat {
+  color: hsl(217, 19%, 35%);
+  opacity: 0.5;
+  font-size: 10px;
+}
+.rev {
+  color: hsl(217, 19%, 35%);
+}
+
+@media only screen and (min-width: 760px) {
+   .App{
+    grid-template-columns: repeat(4, 1fr);
+    max-width: 1100px;
+    margin: auto;
+  
+   }
+   .dane {
+    grid-column: 1/3;
+   }
+
+   .kiraa {
+    grid-column: 4;
+    grid-row: 1/4;
+   }
+   .patii{
+    grid-column: 2/4
+   }
 }
